Fix double scroll bar issue

--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,15 @@
 
 .main-container{
   max-width: 100vw;
+  height: 100vh;
   display: grid;
 }
 
 main{
   transition: background-color 0.4s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  overflow-x: hidden;
 }
 
 @media (min-width: 80em){
