--- a/src/components/ProductPage/ProductPage.css
+++ b/src/components/ProductPage/ProductPage.css
@@ -7,6 +7,6 @@
     grid-template-columns: repeat(auto-fill, minmax( min( 25rem , 100%), 1fr));
     gap: 1.5em;
     padding: 1.5em;
-    max-height: 100%;
+    height: 100%;
     overflow-y: auto;
 }
